--- a/container/src/app/app.component.html
+++ b/container/src/app/app.component.html
@@ -10,6 +10,7 @@
       <li><h2><a routerLink="/child1">Child 1</a></h2></li>
       <li><h2><a routerLink="/child2">Child 2</a></h2></li>
       <li><h2><a routerLink="/child3">Child 3</a></h2></li>
+      <li><h2><a routerLink="/child4">Child 4</a></h2></li>
     </ul>
     <section class="child-app">
         <router-outlet></router-outlet>
