size optimization poc for child 3

--- a/child4/src/app/mat4/mat4.component.html
+++ b/child4/src/app/mat4/mat4.component.html
@@ -2,8 +2,8 @@
     <h1>Table with ang-mat filter+sort</h1>
   </div>
   <ul>
-    <li><h2><a href="/child4/mat4/all">All</a></h2></li>
-    <li><h2><a href="/child4/mat4/mine">Mine</a></h2></li>
+    <li><h2><a href="/#/child4/mat4/all">All</a></h2></li>
+    <li><h2><a href="/#/child4/mat4/mine">Mine</a></h2></li>
   </ul>
   <div class="mat-elevation-z8">
     <form [formGroup]="searchForm" class="search__form">
